add portfolio slideshow. create db

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "babel": "^6.5.2",
     "body-parser": "^1.4.3",
     "ejs": "^2.5.2",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "knex": "^0.12.6",
+    "pg": "^6.1.2"
   }
 }
